--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2176,6 +2176,170 @@ section:nth-child(8)>h1{
 
 /*--------------------------------------footer-------------------------------------------------*/
 
+footer {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    width: 92vw;
+    background: #2d2d32;
+    min-height: 100px;
+    padding: 20px 50px;
+    align-items: center;
+}
+
+.social_icons {
+    width: 20vw;
+    display: flex;
+    justify-content: space-between;
+}
+
+.social_icons a {
+    text-decoration: none;
+    font-size: 1rem;
+    margin-right: 1rem;
+    position: relative;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 3vw;
+    height: 3vw;
+    background: transparent;
+    border: .2rem solid #fac921;
+    border-radius: 50%;
+    font-size: 20px;
+    color: #ffffff;
+    z-index: 1;
+    overflow: hidden;
+    transition: .5s;
+    text-decoration: none;
+}
+
+.social_icons a:hover {
+    color: #342E4AFF;
+    transform: scale(1.15) translateY(-10px);
+}
+
+.social_icons a::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    background: #fac921;
+    z-index: -1;
+    transition: .5s;
+}
+
+.social_icons a:hover::before {
+    width: 100%;
+}
+
+footer .menu {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 10px 0;
+    flex-wrap: wrap;
+    list-style: none;
+}
+
+footer .menu li a {
+    font-family: 'Poppins', roboto;
+    text-decoration: none;
+    font-size: 1.5em;
+    color: #ffffff;
+    margin: 0 10px;
+    display: inline-block;
+    transition: .5s;
+}
+
+footer .menu li a:hover {
+    transform: translateY(-5px);
+    color: #fac921;
+}
+
+footer p {
+    font-family: 'Poppins', roboto;
+    color:#ffffff;
+    text-align: center;
+    margin-top: 15px;
+    margin-bottom: 10px;
+    font-size: 1.1em;
+    letter-spacing: 2px;
+}
+
+footer .wave {
+    position: absolute;
+    top: -80px;
+    left: 0;
+    width: 100%;
+    height: 80px;
+    background: url(../images/Frame26.png);
+    background-size: 1000px 100px;
+}
+
+footer .wave#wave1 {
+    z-index: 1000;
+    /* opacity: 1; */
+    bottom: 0;
+    animation: animateWave 5s linear infinite;
+}
+
+footer .wave#wave2 {
+    z-index: 999;
+    opacity: .8;
+    bottom: 0;
+    animation: animateWave2 4s linear infinite;
+}
+
+footer .wave#wave3 {
+    z-index: 1000;
+    opacity: .2;
+    bottom: 15px;
+    animation: animateWave 3s linear infinite;
+}
+
+footer .wave#wave4 {
+    z-index: 999;
+    opacity: .7;
+    bottom: 20px;
+    animation: animateWave2 3s linear infinite;
+}
+
+
+@keyframes homeBgText {
+
+    100% {
+        background-position: 1300px 0;
+    }
+}
+
+@keyframes animateWave {
+    0% {
+        background-position-x: 1000px;
+    }
+
+    100% {
+        background-position-x: 0px;
+    }
+}
+
+@keyframes animateWave2 {
+    0% {
+        background-position-x: 0px;
+    }
+
+    100% {
+        background-position-x: 1000px;
+    }
+}
+
+
+
+
+
 /*body footer>div{*/
 /*    position: relative;*/
 /*    width: 100%;*/
