--- a/assets/css/Responsive425px/section8.css
+++ b/assets/css/Responsive425px/section8.css
@@ -1,4 +1,9 @@
-@media all and (max-width: 425px) {
+@media all and (min-width: 321px) and (max-width: 425px) {
+
+
+    .contact-section {
+        height: 200vh;
+    }
 
 
     section:nth-child(8) > h1 {
@@ -7,96 +12,122 @@
     }
 
     .contact-section>div>address>div:nth-child(1)>hr {
-        left: 6vw;
+        left: 12vw;
     }
 
     .contact-section>div>address>div:nth-child(1)>h1 {
         width: 31vw;
         font-size: 4.5vw;
-        left: 8vw;
+        left: 20vw;
     }
 
     .contact-section>div>address>div:nth-child(1)>p {
-        width: 35vw;
-        font-size: 2.5vw;
+        width: 69vw;
+        font-size: 3.5vw;
         top: 14vh;
-        left: 8vw;
+        left: 21vw;
+
     }
 
     .contact-section>div>address>div:nth-child(2)>div:nth-child(2)>h4 {
-        left: 60vw;
-        width: 18vw;
+        left: 35vw;
+        top: 19vh;
+        width: 23vw;
     }
 
     .contact-section>div>address>div:nth-child(2)>div:nth-child(1)>i {
-        top: 9vh;
-        left: 54vw;
+        top: 28vh;
+        left: 22vw;
     }
 
     .contact-section>div>address>div:nth-child(2)>div:nth-child(2)>a {
-        left: 59vw;
-        top: -2vh;
+        left: 34vw;
+        top: 16vh;
         font-size: 2.5vh;
     }
 
     .contact-section>div>address>div:nth-child(3)>div:nth-child(1)>i {
-        bottom: -1.5vh;
-        left: 54vw;
+        top: 21vh;
+        left: 23vw;
     }
 
     .contact-section>div>address>div:nth-child(3)>div:nth-child(2)>h4 {
-        left: 61vw;
-        bottom: 7.5vh;
-        width: 22vw;
+        left: 35vw;
+        top: 12vh;
+        width: 29vw;
     }
 
     .contact-section>div>address>div:nth-child(3)>div:nth-child(2)>a {
-        left: 61vw;
-        bottom: 10.8vh;
+        left: 37vw;
+        top: 9vh;
     }
 
     .contact-section>div>address>div:nth-child(4)>div:nth-child(1)>i {
-        bottom: 6vh;
-        left: 53vw;
+        top: 12vh;
+        left: 23vw;
     }
     .contact-section>div>address>div:nth-child(4)>div:nth-child(2)>h4 {
-        left: 62vw;
-        bottom: 14vh;
-        width: 16vw;
+        left: 36vw;
+        top: 3vh;
+        width: 21vw;
     }
 
     .contact-section>div>address>div:nth-child(4)>div:nth-child(2)>a {
-        left: 50vw;
-        bottom: 16.5vh;
+        left: 19vw;
+        top: 0.5vh;
     }
 
     .contact-section aside>div>hr {
-        top: 59vh;
-        left: 6vw;
+        top: 66vh;
+        left: 12vw;
     }
 
     .contact-section aside>div>h1 {
         width: 25vw;
         font-size: 4.5vw;
-        top: 64vh;
-        left: 8vw;
+        top: 72vh;
+        left: 22vw;
     }
 
     .contact-section aside>div>p {
-        width: 35vw;
-        font-size: 2.5vw;
-        top: 72vh;
-        left: 8vw;
+        width: 69vw;
+        font-size: 3.5vw;
+        top: 78vh;
+        left: 22vw;
     }
 
     .contact-section aside>form>fieldset {
-        left: 37vh;;
-        top: 57vh;
+        left: 12vh;
+        top: 90vh;
     }
+
+    .contact-section aside>form>fieldset>input {
+        width: 60vw;
+    }
+
+    .contact-section aside>form>fieldset>textarea {
+        width: 59vw;
+    }
+
     .contact-section>ul {
-        top: 54vh;
-        right: 10vw;
-        width: 100.7vw;
+        top: 101vh;
+        right: 13vw;
+        width: 100vw;
+    }
+
+    .contact-section>div>address>div:nth-child(2)>div:nth-child(1) {
+        top: 22vh;
+        left: 23vw;
+    }
+
+    .contact-section>div>address>div:nth-child(3)>div:nth-child(1) {
+        bottom: -15vh;
+        left: 23vw;
+    }
+
+    .contact-section>div>address>div:nth-child(4)>div:nth-child(1) {
+        bottom: -7vh;
+        left: 23vw;
     }
 
 }
