--- a/page/assets/css/style.css
+++ b/page/assets/css/style.css
@@ -114,7 +114,7 @@ section:nth-child(2){
     border-radius: 10px;
     background: #FFF;
     box-shadow: 0px 2px 5px 2px #B8B8B8;
-    margin-left: 120px;
+    margin-left: 8vw;
     margin-top: 15vh;
     margin-bottom: 10vh;
 }
@@ -138,7 +138,7 @@ section:nth-child(4){
     border-radius: 10px;
     background: #FFF;
     box-shadow: 0px 2px 5px 2px #B8B8B8;
-    margin-left: 120px;
+    margin-left: 8vw;
     margin-top: 15vh;
     margin-bottom: 10vh;
 }
@@ -163,7 +163,7 @@ section:nth-child(6){
     border-radius: 10px;
     background: #FFF;
     box-shadow: 0px 2px 5px 2px #B8B8B8;
-    margin-left: 120px;
+    margin-left: 8vw;
     margin-top: 15vh;
     margin-bottom: 10vh;
 }
