--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2201,6 +2201,7 @@ footer {
     align-items: center;
     width: 3vw;
     height: 3vw;
+    top: 1vh;
     background: transparent;
     border: .2rem solid #fac921;
     border-radius: 50%;
