--- a/page/assets/css/style.css
+++ b/page/assets/css/style.css
@@ -295,6 +295,18 @@ section:nth-child(19){
     border-radius: 10px;
     background: #FFF;
     box-shadow: 0px 2px 5px 2px #B8B8B8;
+    margin-left: 30vw;
+    margin-top: 0vh;
+    margin-bottom: 1vh;
+}
+
+section:nth-child(21){
+    width: 39%;
+    height: 80vh;
+    flex-shrink: 0;
+    border-radius: 10px;
+    background: #FFF;
+    box-shadow: 0px 2px 5px 2px #B8B8B8;
     margin-left: 8vw;
     margin-top: 0vh;
     margin-bottom: 1vh;
