--- a/page/assets/css/style.css
+++ b/page/assets/css/style.css
@@ -312,3 +312,15 @@ section:nth-child(21){
     margin-bottom: 1vh;
 }
 
+section:nth-child(22){
+    width: 39%;
+    height: 80vh;
+    flex-shrink: 0;
+    border-radius: 10px;
+    background: #FFF;
+    box-shadow: 0px 2px 5px 2px #B8B8B8;
+    margin-left: 53vw;
+    margin-top: -83vh;
+    margin-bottom: 7vh;
+}
+
